--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                         </a>
                     </div>
                     <div class="col-xl-5 my-img-top">
-                        <img src="img/my-image.png" alt="" class="img-fluid">
+                        <img src="img/my-image.png" alt="" class="img-fluid img-thubnail">
 <!--                         <img src="img/banner_shape.png" alt="" class="img-fluid img-bord"> -->
                     </div>
                 </div>
