change in ambitation

--- a/index.html
+++ b/index.html
@@ -192,22 +192,23 @@
                                 <img src="img/about_1.png" alt="">
                             </div>
                             <h2>My Ambition</h2>
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem, dolore dolorum!
-                                Eum et ex corrupti impedit officia cupiditate quis porro soluta dolorem est! Rem
-                                dicta itaque, nesciunt exercitationem voluptas ipsa error tempora pariatur magnam
-                                voluptatibus incidunt eos unde sed id velit repellat quaerat optio qui quo sapiente
-                                necessitatibus ducimus rerum?</p>
+                            <p> Ambition are a necessary thought. Everybody has some other ambitions or
+                                In their life. Without ambition life Seems to be without any motive.
+                                Ambition gives. us the energy to achieve our goal. The main motive of
+                                my life is to import the knowledge I have gained from others. 
+                                As I believe in the fact that knowledge enhances the skills, integrity and modesty of a person.
+                            </p>
                         </div>
                         <div class="box">
                             <div class="img-box">
                                 <img src="img/about_2.png" alt="">
                             </div>
                             <h2>My Purpose</h2>
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem, dolore dolorum!
-                                Eum et ex corrupti impedit officia cupiditate quis porro soluta dolorem est! Rem
-                                dicta itaque, nesciunt exercitationem voluptas ipsa error tempora pariatur magnam
-                                voluptatibus incidunt eos unde sed id velit repellat quaerat optio qui quo sapiente
-                                necessitatibus ducimus rerum?</p>
+                            <p>The purpose of my life is to find meaning and happiness by helping others,
+                                making a positive impact on society, and pursuing my passions.
+                                I strive to live a life filled with love, compassion, and personal growth, 
+                                while leaving a lasting legacy that inspires and uplifts others.
+                            </p>
                         </div>
                     </div>
                     <div class="col-lg-6 d-flex align-items-center justify-content-center my-position">
