--- a/index.html
+++ b/index.html
@@ -399,7 +399,15 @@
                 <div class="row py-5">
                     <div class="col-lg-3 col-md-6 pt-2 d-flex justify-content-center align-items-center">
                         <div class="my-card">
-                            <a href="#">
+                            <a href="https://sujayet.github.io/weather/">
+                                <div class="cover">VIEW DEMO</div>
+                                <img src="img/weatherProject.png" alt="404">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 pt-2 d-flex justify-content-center align-items-center">
+                        <div class="my-card">
+                            <a href="https://sujayet.github.io/swigo/#">
                                 <div class="cover">VIEW DEMO</div>
                                 <img src="img/project 1.png" alt="">
                             </a>
@@ -407,7 +415,7 @@
                     </div>
                     <div class="col-lg-3 col-md-6 pt-2 d-flex justify-content-center align-items-center">
                         <div class="my-card">
-                            <a href="#">
+                            <a href="https://sujayet.github.io/swigo/#">
                                 <div class="cover">VIEW DEMO</div>
                                 <img src="img/project 1.png" alt="">
                             </a>
@@ -415,17 +423,9 @@
                     </div>
                     <div class="col-lg-3 col-md-6 pt-2 d-flex justify-content-center align-items-center">
                         <div class="my-card">
-                            <a href="#">
+                            <a href="https://sujayet.github.io/envelopee/">
                                 <div class="cover">VIEW DEMO</div>
-                                <img src="img/project 1.png" alt="">
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 pt-2 d-flex justify-content-center align-items-center">
-                        <div class="my-card">
-                            <a href="#">
-                                <div class="cover">VIEW DEMO</div>
-                                <img src="img/project 1.png" alt="">
+                                <img src="img/envelopeProject.png" alt="">
 
                             </a>
                         </div>
