--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                         <div class="my-card">
                             <a href="https://sujayet.github.io/swigo/#">
                                 <div class="cover">VIEW DEMO</div>
-                                <img src="img/project 1.png" alt="">
+                                <img src="img/swigoProject.png" alt="">
                             </a>
                         </div>
                     </div>
@@ -417,7 +417,7 @@
                         <div class="my-card">
                             <a href="https://sujayet.github.io/swigo/#">
                                 <div class="cover">VIEW DEMO</div>
-                                <img src="img/project 1.png" alt="">
+                                <img src="img/SwigoProject.png" alt="">
                             </a>
                         </div>
                     </div>
