--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                             specialize in translating complex ideas into user-friendly
                             interfaces that captivate and engage.
                         </p>
-                        <a href="img/ResumeMe.pdf" download="My-Resume">Download CV
+                        <a href="img/ResumeME.pdf" download="My-Resume">Download CV
                             <i class="fa fa-download"></i>
                         </a>
                     </div>
@@ -296,7 +296,7 @@
                             <h5>2019-2021</h5>
                             <p>I completed my secondary education from Tiljala High School. On seconadry examination,
                             </p>
-                            <a href="img/ResumeMe.pdf" download="My-Resume" target="_blank">Download CV</a>
+                            <a href="img/ResumeME.pdf" download="My-Resume" target="_blank">Download CV</a>
                         </div>
                     </div>
                     <div class="col-12">
@@ -308,7 +308,7 @@
                             <p>I completed my higher secondary education from Tiljala High School. On higher seconadry
                                 examination,
                             </p>
-                            <a href="img/ResumeMe.pdf" download="My-Resume"  target="_blank">Download CV</a>
+                            <a href="img/ResumeME.pdf" download="My-Resume"  target="_blank">Download CV</a>
                         </div>
                     </div>
                     <div class="col-12">
@@ -417,7 +417,7 @@
                         <div class="my-card">
                             <a href="https://sujayet.github.io/swigo/#">
                                 <div class="cover">VIEW DEMO</div>
-                                <img src="img/SwigoProject.png" alt="">
+                                <img src="img/swigoProject.png" alt="">
                             </a>
                         </div>
                     </div>
