--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                         <div class="my-card">
                             <a href="https://sujayet.github.io/weather/">
                                 <div class="cover">VIEW DEMO</div>
-                                <img src="img/weatherProject.png" alt="404">
+                                <img src="img/weatherProject.png" alt="404" target="_blank">
                             </a>
                         </div>
                     </div>
@@ -409,15 +409,15 @@
                         <div class="my-card">
                             <a href="https://sujayet.github.io/swigo/#">
                                 <div class="cover">VIEW DEMO</div>
-                                <img src="img/swigoProject.png" alt="">
+                                <img src="img/swigoProject.png" alt="404" target="_blank">
                             </a>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 pt-2 d-flex justify-content-center align-items-center">
                         <div class="my-card">
-                            <a href="https://sujayet.github.io/swigo/#">
+                            <a href="https://sujayet.github.io/My_Portfolio_/">
                                 <div class="cover">VIEW DEMO</div>
-                                <img src="img/swigoProject.png" alt="">
+                                <img src="img/portfolioProject.png" alt="404" target="_blank">
                             </a>
                         </div>
                     </div>
@@ -425,7 +425,7 @@
                         <div class="my-card">
                             <a href="https://sujayet.github.io/envelopee/">
                                 <div class="cover">VIEW DEMO</div>
-                                <img src="img/envelopeProject.png" alt="">
+                                <img src="img/envelopeProject.png" alt="404" target="_blank">
 
                             </a>
                         </div>
